# twodirect

./: .gitignore  FRONTEND_INTEGRATION_STATUS.md  HYBRID_SEARCH_SETUP.md  QUICKSTART.md  README.md
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  coupon_schema.sql  supabase_embedding_migration.sql  supabase_fix_embedding_dimensions.sql  supabase_schema.sql  supabase_seed.sql
backend/src/: main.rs
backend/src/db/: mod.rs
backend/src/handlers/: mod.rs
backend/src/models/: mod.rs
docs/: HYBRID_SEARCH_ARCHITECTURE.md
embedding_service/: .env.example  .gitignore  GETTING_STARTED.md  README.md  TROUBLESHOOTING.md  UV_MIGRATION.md  generate_embeddings.sh  main.py  pyproject.toml  requirements.txt  start.sh  test_model_loading.py
embedding_service/scripts/: generate_embeddings.py
embedding_service/services/: supabase_service.py
note/: 01-customer-interview-script.md  02-partner-research-7eleven.md  03-competitive-analysis.md  04-pitch-deck.md  05-api-research.md  06-innovation-track-submission.md  [IDEA_SUBMIT] GOSOFT RETAIL TECH HACKATHON - Twodirect.docx  action-plan.md  brainstorm.md  twodirect-innovation-track-submission-formal.docx  twodirect-innovation-track-submission.docx  ~$odirect-innovation-track-submission-formal.docx
scripts/: create_formal_submission.py  create_submission_doc.py
web/: next.config.ts  package-lock.json  package.json  vercel.json
web/scripts/: download-images.mjs
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/src/components/: BannerCarousel.tsx  BranchCard.tsx  CategoryButton.tsx  ChatBot.tsx  Footer.tsx  Header.tsx  LocationPicker.tsx  MapView.tsx  PendingReservationBanner.tsx  PriceComparison.tsx  ProductCard.tsx  (+6 more)
(+45 files in other folders)
